--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "extlib/sim"]
 	path = extlib/sim
-	url = git@github.com:kikiishiki/cpuex.git
+	url = https://github.com/kikiishiki/cpuex.git
