--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "extlib/sim"]
-	path = extlib/sim
-	url = https://github.com/kikiishiki/cpuex.git
+[submodule "extlib/gaia"]
+	path = extlib/gaia
+	url = https://github.com/b-inary/gaia-software.git
