--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extlib/gaia"]
 	path = extlib/gaia
 	url = https://github.com/b-inary/gaia-software.git
+[submodule "extlib/benz-gaia"]
+	path = extlib/benz-gaia
+	url = git@github.com:wasabiz/benz-gaia.git
