--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 *~
-*.native
-*.bin
+*.i
 *.out
-/test/*.s
-/bin/sim
-bin/as
 _build/
-libucc.s
-cc
-/test/benz/log.txt
-/test/benz/build/
+bin/as
+bin/cc
+bin/sim
+lib/libucc.s
+test/*.s
+test/benz/log.txt
+test/benz/build/
