update ucc script

--- a/test/benz/Makefile
+++ b/test/benz/Makefile
@@ -5,7 +5,7 @@ test:
 	cp $(UCCDIR)/extlib/benz-gaia/*.c build/
 	cp -r $(UCCDIR)/extlib/benz-gaia/include build/
 	cp main.c build/
-	$(UCCDIR)/bin/ucc -a='-Wno-unused-label' -I./build/include build/*.c
+	$(UCCDIR)/bin/ucc -Wa=-Wno-unused-label -I./build/include build/*.c
 	mv a.out build/benz.out
 	$(UCCDIR)/bin/sim -simple build/benz.out > log.txt
 	diff expected.txt log.txt
